projects/plugins/jetpack/modules/carousel/jetpack-carousel.css
/* ... */
.jp-carousel-info-footer .jp-carousel-photo-title {
	text-align: center;
	font: normal 13px/1em 'Helvetica Neue', sans-serif;
	white-space: nowrap;
	color: #999;
	cursor: pointer;
	margin: 0;
    text-overflow: ellipsis;
}

.jp-carousel-photo-description {
	color: #999;
	font-size: 16px;
	margin-bottom: 0;
	width: 100%;
}

.jp-carousel-photo-description {
	overflow: hidden;
	overflow-wrap: break-word;
}

.jp-carousel-photo-description p {
	color: #999;
	line-height:1.4;
	margin-bottom: 0;
}

.jp-carousel-photo-description p a,
.jp-carousel-comments p a,
.jp-carousel-info h2 a {
	color: #fff !important;
	border: none !important;
	text-decoration: underline !important;
	font-weight: normal !important;
	font-style: normal !important;
}

.jp-carousel-photo-description p strong,
.jp-carousel-photo-description p b {
	font-weight: bold;
	color: #999;
}

.jp-carousel-photo-description p em,
.jp-carousel-photo-description p i {
	font-style: italic;
	color: #999;
}

.jp-carousel-photo-description p a:hover,
.jp-carousel-comments p a:hover,
.jp-carousel-info h2 a:hover {
	color: #68c9e8 !important;
}

.jp-carousel-photo-description p:empty {
	display: none;
}

.jp-carousel-photo-info h1:before,
.jp-carousel-photo-info h1:after,
.jp-carousel-comments-wrapper h1:before,
.jp-carousel-comments-wrapper h1:after {
	content:none !important;
}
/** Title and Desc End **/

/** Meta Box Start **/
.jp-carousel-image-meta {
	color: #fff;
	font-size: 13px;
	font: 12px/1.4 "Helvetica Neue", sans-serif !important;
	width: 100%;
	display: none;
}

.jp-carousel-image-meta.jp-carousel-show {
	display: block;
}

.jp-carousel-image-meta li,
.jp-carousel-image-meta h5 {
	font-family: 'Helvetica Neue', sans-serif !important;
	position: inherit !important;
	top: auto !important;
	right: auto !important;
	left: auto !important;
	bottom: auto !important;
	background: none !important;
	border: none !important;
	font-weight: 400 !important;
	line-height: 1.3em !important;
}

.jp-carousel-image-meta ul {
	margin: 0 !important;
	padding: 0 !important;
	list-style: none !important;
}

.jp-carousel-image-meta li {
	width: 48% !important;
	display: inline-block !important;
	vertical-align: top !important;
	margin: 0 2% 15px 0 !important;
	color: #fff !important;
	font-size: 13px !important;
}

.jp-carousel-image-meta h5 {
	color: #999 !important;
	text-transform: uppercase !important;
	font-size: 10px !important;
	margin: 0 0 2px !important;
	letter-spacing: 0.1em !important;
}

a.jp-carousel-image-download {
	padding-left: 23px;
	display: inline-block;
	clear: both;
	color: #999;
	line-height: 1;
	font-weight: 400;
	font-size: 13px;
	text-decoration: none;
	background-position: 0 -82px;
}

a.jp-carousel-image-download span.photo-size {
	font-size: 11px;
	border-radius: 1em;
	margin-left: 2px;
	display: inline-block;
}

a.jp-carousel-image-download span.photo-size-times {
	padding: 0 1px 0 2px;
}

a.jp-carousel-image-download:hover {
	background-position: 0 -122px;
	color: #68c9e8;
	border: none !important;
}

/** Meta Box End **/

/** Comments Start **/
.jp-carousel-comments {
	font: 15px/1.7 'Helvetica Neue', sans-serif !important;
	font-weight: 400;
	background: none transparent;
	width: 100%;
	bottom: 10px;
	margin-top: 20px;
}

.jp-carousel-comments p a:hover,
.jp-carousel-comments p a:focus,
.jp-carousel-comments p a:active {
	color: #68c9e8 !important;
}

.jp-carousel-comment {
	background: none transparent;
	color: #999;
	overflow: auto;
	width: 100%;
	display: flex;
}

.jp-carousel-comment + .jp-carousel-comment {
	margin-top: 20px;
}

.jp-carousel-comment:last-of-type {
	margin-bottom: 20px;
}

.jp-carousel-comment p {
	color: #999 !important;
}

.jp-carousel-comment .comment-author {
	font-size: 15px;
	font-weight:500;
	padding:0;
	width:auto;
	display: inline;
	float: none;
	border: none;
	margin:0;
}

.jp-carousel-comment .comment-author a {
	color: #fff;
}

.jp-carousel-comment .comment-gravatar {
	float: none;
	margin-right: 10px;
}

.jp-carousel-comment .comment-content {
	border:none;
	padding: 0;
}

.jp-carousel-comment .avatar {
	margin: 0;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
	border: none !important;
	padding: 0 !important;
	background-color: transparent !important;
	min-width: 64px;
}

.jp-carousel-comment .comment-date {
	color:#999;
	font-size: 11px;
	border-bottom: 1px solid #222;
	margin-bottom: 6px;
}

#jp-carousel-comment-form {
	margin: 0 0 10px !important;
	width: 100%;
}

textarea#jp-carousel-comment-form-comment-field {
	background: rgba( 34, 34, 34, 0.9 );
	border: 1px solid #3a3a3a;
	color: #a7aaad;
	font: 16px/1.4 'Helvetica Neue', sans-serif !important;
	width: 100%;
	padding: 10px 10px 5px;
	margin: 0;
	float: none;
	height: 147px;
	-webkit-box-shadow: inset 2px 2px 2px rgba( 0, 0, 0, 0.2 );
	box-shadow: inset 2px 2px 2px rgba( 0, 0, 0, 0.2 );
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px;
	border-radius: 3px;
	overflow: hidden;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

textarea#jp-carousel-comment-form-comment-field::-webkit-input-placeholder {
	color: #555;
}

textarea#jp-carousel-comment-form-comment-field:focus {
	background: #ccc;
	color: #222;
}

textarea#jp-carousel-comment-form-comment-field:focus::-webkit-input-placeholder {
	color: #a7aaad;
}

#jp-carousel-loading-overlay {
	display: none;
	position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
	right: 0;
}

#jp-carousel-loading-wrapper {
	display: flex;
    align-items: center;
    justify-content: center;
	height: 100vh;
	width: 100vw;
}

#jp-carousel-library-loading,
#jp-carousel-library-loading:after {
	border-radius: 50%;
	width: 40px;
	height: 40px;
}
/* ... */

